# soramimic-yomi

./: README.md  pyproject.toml
.github/workflows/: deploy.yaml
api/: main.py
src/soramimi_yomi/data/: english_overrides.csv
src/soramimi_yomi/rules/: english.py
src/soramimic_yomi/: __init__.py  core.py  userdic.py
src/soramimic_yomi/data/: english_overrides.csv
src/soramimic_yomi/dic/: user.csv
src/soramimic_yomi/rules/: __init__.py
tests/: test_yomi.py
