[project]
name = "soramimic-yomi"
version = "0.1.0"
description = "空耳アプリ用の読み推定ライブラリ+API(pyopenjtalk-plusベース、ユーザー辞書・英語カナ変換付き)"
readme = "README.md"
authors = [
    { name = "shimajiroxyz", email = "shimajiroxyz@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyopenjtalk-plus>=0.4.1.post8",
    "e2k>=0.6.2",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
